Fix caurosel on mobile
Bug: T267459

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -62,6 +62,23 @@
     height: 350pt;
 }
 
+.wmcz-caurosel-container .gallery-entry {
+    width: 100%;
+    height: 350pt;
+}
+
+
+@media (max-width: 760px) {
+    .wmcz-caurosel-container {
+        height: 700px;
+    }
+
+    .wmcz-caurosel-container .gallery-entry {
+        width: 100%;
+        height: 700px;
+    }
+}
+
 @media (min-width: 760px) {
     .wmcz-caurosel-container {
         margin: 0 30pt;
@@ -74,11 +91,6 @@
     .wmcz-caurosel-right-colored {
         width: 50%;
     }
-}
-
-.wmcz-caurosel-container .gallery-entry {
-    width: 100%;
-    height: 350pt;
 }
 
 .wmcz-caurosel-left img {
